# Cybersecurity-LLM-Engineering

./: .gitignore  DATASET_CARD.md  MODEL_CARD.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: public-release.yml
case-studies/: dataset-quality.md  fine-tuning.md  inference-benchmarking.md  poc-authorization-evidence.md
configs/: example.yaml
docs/: README.md  authorization-evidence-map.md  evidence-handling.md  poc-evaluation-plan.md  public-release-checklist.md  reference-architecture.md
evidence/: evidence-register.yaml
results/: README.md  dataset-quality-summary.csv  evaluation-efficiency.csv  generation-run-summary.csv  inference-benchmark.csv  partition-validation-summary.csv  recovery-summary.csv  training-history.csv
sample-data/: synthetic_examples.jsonl
scripts/: build_result_plots.py
src/: __init__.py
src/benchmarking/: __init__.py  openai_compatible.py
src/evaluation/: __init__.py  dataset_quality.py
src/governance/: __init__.py  evidence_register.py  public_release.py
src/training/: __init__.py  checkpoints.py  train_lora.py
templates/: authorization-evidence-record.md  benchmark-run-manifest.yaml  evidence-integrity-manifest.csv  model-registry-record.yaml  poc-evaluation-record.md  risk-register.csv  system-manifest.yaml
tests/: test_benchmarking.py  test_checkpoints.py  test_dataset_quality.py  test_evidence_register.py  test_public_release.py
